force-app/main/default/objects/FieloCRUD__ListViewAction__c/FieloCRUD__ListViewAction__c.object-meta.xml
<CustomObject>
    <label>List View Action</label>
    <nameField>
        <label>List View Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>