force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Menu Action</fullName>
                <default>true</default>
                <label>Menu Action</label>
            </value>
            <value>
                <fullName>JS Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>