force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ActionMenu__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ActionMenu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Menu that handles the Action through the list view or related list. Commonly is a menu that contains a CRUD component but it can also be a custom page.</inlineHelpText>
    <label>Action Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>List View Actions</relationshipLabel>
    <relationshipName>ListViewActions</relationshipName>
    <type>Lookup</type>
</CustomField>