force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ActionMode__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ActionMode__c</fullName>
    <formula>LOWER(RPAD(TEXT(FieloCRUD__ActionParameter__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Mode</label>
    <type>Text</type>
</CustomField>