force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ActionParameter__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ActionParameter__c</fullName>
    <label>Action Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>