force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__Condition__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Condition__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(FieloCRUD__ConditionField__c)), NOT(ISBLANK(FieloCRUD__ConditionValue__c))),
FieloCRUD__ConditionField__c + " = " +  FieloCRUD__ConditionValue__c,
""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition</label>
    <type>Text</type>
</CustomField>