force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ConditionField__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ConditionField__c</fullName>
    <inlineHelpText>Define the field API name that will determine if the action appears. Ex.: (Edit Action) If you don&#39;t want users to edit invoice records that are already approved, complete this field with Approved__c for instance.</inlineHelpText>
    <label>Condition Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>