force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ConditionValue__c</fullName>
    <inlineHelpText>Complete with the value that the field defined on "Condition Field" should take in order to display the edit action. Ex.: If you don&#39;t want users to edit invoice records that are already approved, complete this field with FALSE.</inlineHelpText>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>