force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>