force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__JSCode__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__JSCode__c</fullName>
    <inlineHelpText>Define javascript functions that will be consumed by the “JS OnClick” button.</inlineHelpText>
    <label>JS Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>