force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__LabelSiteName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelSiteName__c</fullName>
    <label>Label Site Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>