force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__LinkField__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LinkField__c</fullName>
    <inlineHelpText>Define the field API name that will work as a link redirecting the user to see the detail of a record. If this field is null, then the user won&#39;t be able to see the record detail.</inlineHelpText>
    <label>Link Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>