force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__ListView__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ListView__c</fullName>
    <label>List View</label>
    <referenceTo>FieloCRUD__ListView__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>ListViewActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>