force-app/main/default/objects/FieloCRUD__ListViewAction__c/fields/FieloCRUD__MenuRedirectAfterAction__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__MenuRedirectAfterAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you selected a "Action Menu" when you click the action, the list view add the param "retOnSave". If you define a Menu, that parameter is completed with the Menu you selected, if this field is null that parameter is completed with the current List View</inlineHelpText>
    <label>Menu Redirect After Action</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>List View Actions (Menu Redirect After Action)</relationshipLabel>
    <relationshipName>ListViewMenuRedirectAfterAction</relationshipName>
    <type>Lookup</type>
</CustomField>