force-app/main/default/objects/FieloCRUD__ListViewAction__c/recordTypes/FieloCRUD__FieldAction.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__FieldAction</fullName>
    <active>true</active>
    <label>Field Action</label>
</RecordType>