force-app/main/default/objects/FieloCRUD__ListViewAction__c/recordTypes/FieloCRUD__GlobalAction.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__GlobalAction</fullName>
    <active>true</active>
    <label>Global Action</label>
</RecordType>