force-app/main/default/objects/FieloCRUD__ListViewAction__c/recordTypes/FieloCRUD__RecordRowAction.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__RecordRowAction</fullName>
    <active>true</active>
    <label>Record Row Action</label>
</RecordType>